fix: fix wrong color for active link in nav

--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -331,7 +331,8 @@ button {
 
 .nav__link.active {
   padding-bottom: 3px;
-  border-bottom: 3px solid #f1cdb3; }
+  border-bottom: 3px solid #f1cdb3;
+  color: #FAFAFA; }
 
 .main-screen {
   padding-top: 180px;
